* 2005-06-26 Jeremy Sanders <jeremy@jeremysanders.net>
	- Initial Image support (not yet working)

* 2005-06-21 Jeremy Sanders <jeremy@jeremysanders.net>
	- Slight changes to doc eps/png generation logic
	
* 2005-06-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Enable key length of line to be changed
	- Put a comment in blank __init__.py files to support windows
	unzip tools
	
* 2005-06-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix bug with unfilled symbols on key
	
* 2005-06-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- Provide fit outExpr setting, giving output expression as text
	- Fix error symmetrising for asymmetric errors
	- Better button behaviour for editing text popup
	
* 2005-06-13 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix multi-window problem on opening files
	- Fix xy widget line clipping problem
	- Move directory manipulation to using os.path
	- Make a new control for text property editing. Can popup a window
	to help the user edit the text
	
* 2005-06-12 Jeremy Sanders <jeremy@jeremysanders.net>
        - ReloadData command and Data, Reload dialog added to reload
	linked datasets (idea J. Graham)
	- Add icon for reload, create, and new datasets
	- os.path import added to commandinterface
	- GPL() command works now
	- function plotters can be set to plot only over a particular
	range (patch by James Graham)
	- Use QSettings to do settings code rather than own code (based on
	patch by James Graham)
	- Default settings for root widget fixed
	- Made clipping region larger to help get diamond error box angles
	correct
	- Small fix to dataset creation dialog (unsized object error)
	
* 2005-06-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Command line parsing now uses optparse (thanks to J Graham for
	inspiration)
	- MainWindow now accepts drops of files (patch by James Graham)
	- MainWindow has per-window working directory (again J. Graham)

* 2005-05-24 Jeremy Sanders <jeremy@jeremysanders.net>