@@ -1,3 +1,6 @@
+* 2005-06-28 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Further Image support
+
 * 2005-06-26 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Initial Image support (not yet working)
 
